# effect3d

./: CMakeLists.txt  README.md
src/: DetectorManager.cpp  DetectorManager.h  Effect3d.cpp  Effect3d.h  EffectManager.cpp  EffectManager.h  IDetector.h  IEffect.h  ImageHandler.cpp  ImageHandler.h  MediaHandler.cpp  MediaHandler.h  VideoHandler.cpp  VideoHandler.h  YolactDetector.cpp  YolactDetector.h  common.h  main.cpp
